[gd_scene load_steps=12 format=2]

[ext_resource path="res://Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/enemy_tank_4.png" type="Texture" id=3]
[ext_resource path="res://Enemies/enemy_tank_1.png" type="Texture" id=4]
[ext_resource path="res://Enemies/EnemyTank.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.18289, 7.90609 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.89507, 7.04752 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Small",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Large",
"speed": 5.0
} ]

[node name="EnemyTank" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 71
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ChangeStateTimer" type="Timer" parent="."]
wait_time = 1.001
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.092
autostart = true

[node name="Tank" parent="." instance=ExtResource( 1 )]

[node name="Hurtbox" parent="Tank" index="0"]
collision_layer = 16

[node name="CollisionShape2D" parent="Tank/Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="AnimatedSprite" parent="Tank" index="2"]
frames = SubResource( 7 )
animation = "Small"
[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_ChangeStateTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="on_zero_health" from="Tank/Stats" to="." method="_on_Stats_on_zero_health"]

[editable path="Tank"]

[editable path="Tank/Hurtbox"]
